# robot_detection

./: .gitignore  README.md  train.sh
Detection/model/: trt.sh
Detection/src/: main.py  record.py
Detection/src/utils/: calib.py  detector.py  nms.py  visualize.py
configs/_base_/datasets/: psvoc.py  voc0712.py
configs/parking_slot/: yolov3_psvoc.py  yolox_psvoc.py
configs/pascal_voc/: centernet_1x_psvoc0712.py  faster_rcnn_r50_fpn_1x_psvoc0712.py  yolo_1x_psvoc0712.py
configs/yolox/: yolox_nano_8x8_300e_coco.py  yolox_psvoc0712.py  yolox_s_8x8_300e_coco.py
datasets/: __init__.py  psvoc.py
deployment/csrc/: CMakeLists.txt  inference.cpp
deployment/onnx-tensorrt/: CMakeLists.txt
deployment/onnx-tensorrt/plugin/: CMakeLists.txt  CMakeLists.txt2
deployment/onnx-tensorrt/plugin/batchedNMSPlugin/: CMakeLists.txt1  batchedNMSPlugin.cpp  batchedNMSPlugin.h
deployment/onnx-tensorrt/plugin/efficientNMSPlugin/: CMakeLists.txt  efficientNMSPlugin.cpp
deployment/python/: kitti.py  pix.py
deployment/python/onnx/: onnx2trt.py  onnxruntime_test.py  torch2onnx.py
deployment/python/utils/: decode.py  detector.py  post_process.py  visualize.py
my_tool/: gen.py  split.py  video.py
robot_train/LaneDetection/: .gitignore  launch_training.sh  requirements.txt
robot_train/LaneDetection/configs/: tusimple.py
robot_train/ObjectDetection/configs/yolov8/: yolov8_s_syncbn_fast_8xb16-500e_coco.py  yolov8_s_syncbn_fast_8xb16-500e_psvoc.py
robot_train/ObjectDetection/mmyolo/datasets/: __init__.py  yolov5_psvoc.py
robot_train/ObjectDetection/scripts/: train_coco.sh  train_parkingslot.sh
robot_train/ParkingSpaceDetection/: config.py
robot_train/ParkingSpaceDetection/scripts/: data_prep.sh  train.sh
script/: fps_benchmark.sh  test.sh  torch2onnx.sh  train.sh
sh/: demo.sh  fps_benchmark.sh  tensorboard.sh  test.sh  torch2onnx.sh
tools/: test.py  train.py  video.py
tools/deployment/: pytorch2onnx.py
